Version 0.2.1     unreleased

	* Pull in latest version of run-script-framework.
	* Exclude generated files in `docs/_build` from the Python sdist.
	* Migrate from Poetry to UV for the Python build system.

Version 0.2.0     17 Sep 2025

	* Add a new 'suite -f' command to run faster subset of the suite.
	* Upgrade to poetry-dynamic-versioning v1.9.1 for minor fixes.
	* Add .python-version in preferred order to support pyenv.
	* Add Sphinx configuration path to .readthedocs.yml.
	* Version profiles_settings.xml to control PyCharm inspection profile.
	* Migrate to Read the Docs integration via the new GitHub App.
	* Adjust GHA build process to allow builds for stacked PRs.
	* Add a new `run clean` target to clean up generated data.
	* Move unit tests from `tests` into `src/tests/uciparse`.
	* Update the MyPy configuration so we're using latest rules.
	* Replace black, isort, and pylint with the Ruff formatter and linter.
	* Address Ruff linter warnings and modernize the code to 2025 standards.
	* Remove importlib-metadata dependency in favor of standard library.
	* Update all dependencies and outdated constraints.

Version 0.1.26     08 Jan 2025

	* Migrate to Poetry v2 and project-managed Poetry plugins.
	* Move configuration into pyproject.toml for pytest, mypy & coverage.
	* Upgrade to gha-shared-workflows@v8 for Poetry v2 support.
	* Update all dependencies and outdated constraints.

Version 0.1.25     02 Jan 2025

	* Add GitHub security policy in SECURITY.md.
	* Pull in latest version of run-script-framework.
	* Update dependencies to address Dependabot warnings.
	* Upgrade to gha-shared-workflows@v7 with publish improvements.
	* Add a default .pytest.ini file based on new cookiecutter template.
	* Change the default branch in GitHub from master to main.

Version 0.1.24     15 Oct 2024

	* Pull in latest updates from run-script-framework.
	* Simplify GHA integration with coveralls.io.
	* Update transitive dependencies to address Dependabot warnings.